<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <com.mapbox.mapboxsdk.views.MapView
        android:id="@+id/cameraMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_camera_animate"
        android:id="@+id/cameraAnimateButton"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_camera_animate_callback"
        android:id="@+id/cameraAnimateCallbackButton"
        android:layout_alignTop="@+id/cameraAnimateButton"
        android:layout_centerHorizontal="true"
        android:background="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_camera_animate_duration"
        android:id="@+id/cameraAnimateDurationButton"
        android:layout_alignBottom="@+id/cameraAnimateCallbackButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@color/white"/>

</RelativeLayout>
